[package]
name = "modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bitcoin = { version = "0.30.1", features = ["rand-std"]}
bs58 = "0.5.0"
chrono = "0.4.26"
ethers = "2.0.8"
hmac = "0.12.1"
keccak-hash = "0.10.0"
rand = "0.8.5"
ripemd = "0.1.3"
secp256k1 = "0.27.0"
serde = { version = "1.0.183", features = ["derive"] }
sha2 = "0.10.7"
tracing = "0.1.37"
