[package]
name = "modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bit-vec = { version = "0.6.3", features = ["serde"] }
bitcoin = { version = "0.30.1", features = ["rand-std"]}
bs58 = "0.5.0"
chrono = "0.4.31"
ethers = "2.0.10"
hex = "0.4.3"
hmac = "0.12.1"
keccak-hash = "0.10.0"
rand = "0.8.5"
rayon = "1.8.0"
ripemd = "0.1.3"
secp256k1 = "0.27.0"
serde = { version = "1.0.183", features = ["derive"] }
sha2 = "0.10.8"
tracing = "0.1.37"
